@@ -154,6 +154,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-2265: Test case TestSecondarySort failure (daijy)
+
 PIG-3060: FLATTEN in nested foreach fails when the input contains an empty bag (daijy)
 
 PIG-2247: Pig parser does not detect multiple arguments with the same name passed to macro (dreambird via daijy)
